--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
             <manifest>
               <addClasspath>true</addClasspath>
               <classpathPrefix>lib/</classpathPrefix>
-              <mainClass>imic.buoi4.oop.Chicken</mainClass>
+              <mainClass>imic.buoi2.object.Chicken</mainClass>
             </manifest>
           </archive>
         </configuration>
