--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,20 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+
+    <!-- dependency used for XLS older file format
+     (added for information) -->
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi</artifactId>
+      <version>3.17</version>
+    </dependency>
+    <!-- dependency used for XLSX file format -->
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi-ooxml</artifactId>
+      <version>3.17</version>
+    </dependency>
   </dependencies>
 
 
